# eCommerce-Microservices

./: .env copy  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose-logs-etl.dev.yaml  docker-compose.dev.yaml  docker-compose.yaml  k8s_deployment.example.yml  pyproject.toml
.github/workflows/: ci-backend.yaml
account/: Dockerfile  alembic.ini  entrypoint.sh  requirements.txt
account/alembic/: env.py  queries.py
account/alembic/versions/: 05c456d9a1db_db_definition.py
account/src/: constants.py  main.py
account/src/api/: endpoints.py
account/src/api/dependencies/: repository.py  session.py
account/src/api/routes/: account.py  authentication.py
account/src/config/: manager.py
account/src/config/settings/: base.py  development.py  production.py  staging.py
account/src/crud/: __init__.py  user.py
account/src/data/: database.py  models.py  populate_db.py
account/src/data/schemas/: base.py  jwt.py  user.py
account/src/securities/authentication/: jwt.py
account/src/securities/hashing/: password.py
account/src/utilities/: messages.py
account/src/utilities/exceptions/http/: exc_400.py  exc_403.py  exc_404.py
account/tests/: conftest.py
account/tests/integration/: test_login.py  test_main.py
account/tests/utility/: init_db.py  session.py
authentication/: Dockerfile  entrypoint.sh  requirements.txt  run.py
authentication/alembic/: env.py
authentication/alembic/versions/: 05c456d9a1db_db_definition.py
authentication/src/: constants.py  main.py
authentication/src/api/: endpoints.py
authentication/src/api/routes/: login.py
authentication/src/config/settings/: base.py  staging.py
authentication/src/crud/: user.py
authentication/src/data/: models.py
authentication/src/data/schemas/: jwt.py  user.py
authentication/src/securities/authorizations/: jwt.py
authentication/src/securities/hashing/: password.py
authentication/src/utilities/: formatters.py
authentication/tests/: conftest.py
authentication/tests/integration/: test_login.py
authentication/tests/integration/crud/: test_user.py
authentication/tests/utility/: init_db.py  session.py
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py  queries.py
backend/alembic/versions/: 05c456d9a1db_db_definition.py  6468cf57a4f7_first_autogenerated_revision.py  a1b0d81311c4_db_complete.py  ebbdf12d7077_populate_role_and_category.py
backend/src/: config.py  constants.py  main.py
backend/src/api/: endpoints.py
backend/src/api/dependencies/: repository.py
backend/src/api/routes/: endpoint.py  order.py  order_detail.py  product.py  user.py
backend/src/config/: manager.py
backend/src/config/settings/: base.py
backend/src/crud/: base.py  order.py  order_detail.py  product.py  user.py
backend/src/data/: database.py  init_db.py  models.py
backend/src/data/schemas/: base.py  order.py  order_detail.py  user.py
backend/src/securities/hashing/: hash.py  password.py
backend/src/utilities/exceptions/http/: exc_403.py
backend/tests/: conftest.py
backend/tests/integration/crud/: test_order_detail.py  test_product.py  test_user.py
backend/tests/ut/: test_main.py
backend/tests/utility/: init_db.py  session.py
kafka_loader/: config.py  db.py  kafka_consumer.py  kafka_producer.py  main.py
order/: Dockerfile  Dockerfile.Celery  entrypoint.sh  requirements.txt
order/alembic/: env.py
order/alembic/versions/: 05c456d9a1db_db_definition.py
order/src/: celery_worker.py  constants.py  main.py
order/src/api/: endpoints.py
order/src/api/dependencies/: authentication.py
order/src/api/routes/: order.py
order/src/config/: manager.py
order/src/config/settings/: base.py  development.py  production.py  staging.py
order/src/crud/: __init__.py  order.py
order/src/data/: database.py  models.py
order/src/data/schemas/: base.py  jwt.py  order.py  order_detail.py  product.py  user.py
order/src/securities/authorizations/: jwt.py
order/tests/: conftest.py
order/tests/integration/crud/: test_order.py
order/tests/utility/: init_db.py  session.py  token.py
product/: Dockerfile  alembic.ini  entrypoint.sh  requirements.txt
product/alembic/: queries.py
product/alembic/versions/: 05c456d9a1db_db_definition.py
product/src/: main.py
product/src/api/: endpoints.py
product/src/api/dependencies/: authentication.py  repository.py
product/src/api/routes/: order.py  order_detail.py  product.py  user.py
product/src/config/: manager.py
product/src/config/settings/: base.py  development.py  production.py  staging.py
product/src/crud/: __init__.py  base.py  product.py
product/src/data/: models.py  populate_db.py
product/src/data/schemas/: base.py  jwt.py  product.py  user.py
product/src/securities/authorizations/: jwt.py
product/src/utilities/: messages.py
product/tests/: conftest.py
product/tests/integration/crud/: test_order_detail.py  test_product.py
product/tests/utility/: init_db.py  session.py  token.py
(+7 files in other folders)
