[project]
name = "backend_project"
version = "0.0.1"
description = "Project to show backend skills."
authors = [
    {name = "ibasa14", email="ignacio.bas.car@gmail.com"},
]
classifiers = [
    "Topic :: Software Development"
]

dynamic = ["dependencies"]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
homepage = "https://github.com/ibasa14/backend_project"
documentation = "https://github.com/ibasa14/backend_project"
repository = "https://github.com/ibasa14/backend_project"

[tool.black]
color=true
exclude = '''
    /(
        \.git
        | \._build
        | \.back.out
        | \.build
        | \.coverage
        | \.dist
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | ./src/coverage
        | blib2to3
        | tests/data
        | alembic/
    )/
'''
include = '\.pyi?$'
line-length = 80

[tool.isort]
color_output = true
combine_as_imports = true
ensure_newline_before_comments = true
force_alphabetical_sort_within_sections = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
lines_between_sections = 1
multi_line_output = 3
profile = "black"
skip = [
    ".coverage",
    "coverage/*",
    "cov.html",
    ".dockerignore",
    ".env",
    ".github",
    ".gitignore",
    ".html",
    ".md",
    ".python-version",
    ".rst",
    ".xml",
    "alembic/"
]
skip_gitignore = true
skip_glob = [
    "alembic/*",
]
src_paths = [
    "src/",
    "tests/",
]
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
color_output = true
error_summary = true
ignore_missing_imports = true
pretty = true
python_version = "3.10"
strict_optional = true
warn_no_return = true
warn_return_any = false
exclude = ["backend/alembic/"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test_*"]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
    --verbose
    -p no:warnings
    --strict-markers
    --tb=short
    --asyncio-mode=auto
'''
