[project]
name = "eCommerce-microservices IBC"
version = "0.0.1"
description = "Backend project microservices."
authors = [
    {name = "ibasa14", email="ignacio.bas.car@gmail.com"},
]
classifiers = [
    "Topic :: Software Development"
]

dynamic = ["dependencies"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = "==3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["order/requirements.txt"]}

[project.urls]
homepage = "https://github.com/ibasa14/eCommerce-Microservices"
documentation = "https://github.com/ibasa14/eCommerce-Microservices"
repository = "https://github.com/ibasa14/eCommerce-Microservices"

[tool.black]
color=true
exclude = '''
    /(
        \.git
        | \._build
        | \.back.out
        | \.build
        | \.coverage
        | \.dist
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | ./src/coverage
        | blib2to3
        | tests/data
        | alembic/
    )/
'''
include = '\.pyi?$'
line-length = 80

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test_*"]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
    --verbose
    -p no:warnings
    --strict-markers
    --tb=short
'''
