[project]
name = "eCommerce-microservices IBC"
version = "0.0.1"
description = "Backend project microservices."
authors = [
    {name = "ibasa14", email="ignacio.bas.car@gmail.com"},
]
classifiers = [
    "Topic :: Software Development"
]

dynamic = ["dependencies"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = "==3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["order/requirements.txt"]}

[project.urls]
homepage = "https://github.com/ibasa14/eCommerce-Microservices"
documentation = "https://github.com/ibasa14/eCommerce-Microservices"
repository = "https://github.com/ibasa14/eCommerce-Microservices"

[tool.black]
color=true
force-exclude = '/dev /env *.ipynb'
include = '\.pyi?$'
line-length = 80
preview = true

[tool.ruff]
force-exclude=true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic"
]
line-length = 80
ignore = ["E501"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test_*"]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
    --verbose
    -p no:warnings
    --strict-markers
    --tb=short
'''
